# BladeSystem

./: .gitignore  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  app.manifest  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: automation.rs  backup.rs  cleaner.rs  health.rs  lib.rs  logger.rs  main.rs  models.rs  network.rs  optimizer.rs  processes.rs  registry.rs  repair.rs  setup.rs  startup.rs  stats.rs  triggers.rs
src/components/: Header.tsx  Sidebar.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ProgressBar.tsx  Toggle.tsx
src/pages/: Automation.tsx  Backup.tsx  Cleaner.tsx  Dashboard.tsx  Hardware.tsx  Network.tsx  Optimizer.tsx  Processes.tsx  QuickFix.tsx  Repair.tsx  Settings.tsx  Setup.tsx  Startup.tsx  Triggers.tsx
src/styles/: components.css  global.css  sidebar.css
