[package]
name = "blade-system"
version = "1.0.0"
edition = "2021"

[lib]
name = "blade_system_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
winreg = "0.52"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.32"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
